--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" initial-scale="1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="styles/accueil.css" />
   <link rel="stylesheet" type="text/css" href="styles/accueil_responsive.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,7 +39,7 @@
     <!-- Fonctionnement ohmyfood -->
     <section class="fonctionnement-ohmyfood">
       <h2 class="position-titre-fonctionnement">Fonctionnement</h2>
-      <div class="flexbox-fonctionnement-ohmyfood">
+      <div class="flex-column flexbox-fonctionnement-responsive">
         <div class="conteneur-fonctionnement fond-gris-clair">
           <div class="flexbox-blocs-fonctionnement">
             <div class="position-cercle-fonctionnement">
@@ -74,61 +74,78 @@
       <div class="position-titre-restaurants">
         <h2>Restaurants</h2>
       </div>
-      <div>
-        <article>
-          <div>
-            <img src="" alt="photo-la-palette-du-gout" />Nouveau</div>
-          <div>
-            <h3>La palette du goût</h3>
-            <p>Ménilmontant</p>
-            <i class="fa-regular fa-heart"></i>
+      <div class="flex-column flexbox-restaurants-global">
+        <!-- Bloc 'La palette du goût' -->
+        <div class="conteneur-restaurants">
+          <div class="position-relative">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo-la-palette-du-gout" class="photos-restaurants-disponibles" />
+            <span class="nouveau-restaurant">Nouveau</span>
           </div>
-        </article>
-        <article>
-          <div>
-            <img src="" alt="photo-la-note-enchantee" />Nouveau</div>
-          <div>
-            <h3>La note enchantée</h3>
-            <p>Charonne</p>
-            <i class="fa-regular fa-heart"></i>
+          <div class="flex-column position-relative informations-restaurants-disponibles">
+            <h3 class="suppression-margin padding-titre-restaurants">La palette du goût</h3>
+            <p class="suppression-margin padding-paragraphe-restaurants">Ménilmontant</p>
+            <i class="far fa-heart classe-icone"></i>
+            <i class="fas fa-heart classe-icone"></i>
           </div>
-        </article>
-        <article>
-          <div>
-            <img src="" alt="photo-a-la-francaise" />
+        </div>
+        <!-- Bloc 'La note enchantée' -->
+        <div class="conteneur-restaurants">
+          <div class="position-relative">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo-la-note-enchantee" class="photos-restaurants-disponibles" />
+            <span class="nouveau-restaurant">Nouveau</span>
           </div>
-          <div>
-            <h3>À la française</h3>
-            <p>Cité Rouge</p>
-            <i class="fa-regular fa-heart"></i>
+          <div class="flex-column position-relative informations-restaurants-disponibles">
+            <h3 class="suppression-margin padding-titre-restaurants">La note enchantée</h3>
+            <p class="suppression-margin padding-paragraphe-restaurants">Charonne</p>
+            <i class="far fa-heart classe-icone"></i>
+            <i class="fas fa-heart classe-icone"></i>
           </div>
-        </article>
-        <article>
-          <div>
-            <img src="" alt="photo-le-delice-des-sens" />
+        </div>
+        <!-- Bloc 'À la française' -->
+        <div class="conteneur-restaurants">
+          <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo-a-la-francaise" class="photos-restaurants-disponibles" />
+          <div class="flex-column position-relative informations-restaurants-disponibles">
+            <h3 class="suppression-margin padding-titre-restaurants">À la française</h3>
+            <p class="suppression-margin padding-paragraphe-restaurants">Cité Rouge</p>
+            <i class="far fa-heart classe-icone"></i>
+            <i class="fas fa-heart classe-icone"></i>
           </div>
-          <div>
-            <h3>Le délice des sens</h3>
-            <p>Folie-Méricourt</p>
-            <i class="fa-regular fa-heart"></i>
+        </div>
+        <!-- Bloc 'Le délice des sens' -->
+        <div class="conteneur-restaurants">
+          <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo-le-delice-des-sens" class="photos-restaurants-disponibles" />
+          <div class="flex-column position-relative informations-restaurants-disponibles">
+            <h3 class="suppression-margin padding-titre-restaurants">Le délice des sens</h3>
+            <p class="suppression-margin padding-paragraphe-restaurants">Folie-Méricourt</p>
+            <i class="far fa-heart classe-icone"></i>
+            <i class="fas fa-heart classe-icone"></i>
           </div>
-        </article>
+        </div>
       </div>
     </section>
   </main>
-  <footer>
-    <div>
-      <h3>ohmyfood</h3>
-      <nav>
-        <ul>
-          <li>
-            <i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-          <li>
-            <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-          <li>Mentions légales</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
+  <!-- Footer -->
+  <footer class="couleur-blanc">
+    <div class="flex-footer">
+      <span class="titre-footer-ohmyfood">ohmyfood</span>
+      <ul class="flex-footer">
+        <li class="align-center-li gap-footer-1">
+          <i class="fa-solid fa-utensils"></i>
+          <p class="suppression-margin">Proposer un restaurant</p>
+        </li>
+        <li class="align-center-li gap-footer-2">
+          <i class="fa-solid fa-handshake-angle"></i>
+          <p class="suppression-margin">Devenir partenaire</p>
+        </li>
+        <li>
+          <p class="suppression-margin">Mentions légales</p>
+        </li>
+        <li>
+          <p class="suppression-margin">
+            <a href="mailto:ohmyfood@gmail.com" class="couleur-blanc text-decoration-none">Contact</a>
+          </p>
+        </li>
+      </ul>
     </div>
   </footer>
 </body>
