--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <!-- Logo ohmyfood -->
   <div class="hauteur-50px flexbox-justify-align-center">
-    <img src="pictures/logo/ohmyfood.png" alt="logo-ohmyfood" class="logo" />
+    <img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" class="logo" />
   </div>
   </header>
   <main>
@@ -82,7 +82,7 @@
         <!-- Bloc 'La palette du goût' -->
         <article class="conteneur-restaurants">
           <div class="position-relative">
-            <img src="pictures/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo-la-palette-du-gout" class="photos-restaurants-disponibles" />
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo-la-palette-du-gout" class="photos-restaurants-disponibles" />
             <span class="nouveau-restaurant position-absolute">Nouveau</span>
           </div>
           <div class="flex-column position-relative informations-restaurants-disponibles">
@@ -95,7 +95,7 @@
         <!-- Bloc 'La note enchantée' -->
         <article class="conteneur-restaurants">
           <div class="position-relative">
-            <img src="pictures/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo-la-note-enchantee" class="photos-restaurants-disponibles" />
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo-la-note-enchantee" class="photos-restaurants-disponibles" />
             <span class="nouveau-restaurant position-absolute">Nouveau</span>
           </div>
           <div class="flex-column position-relative informations-restaurants-disponibles">
@@ -107,7 +107,7 @@
         </article>
         <!-- Bloc 'À la française' -->
         <article class="conteneur-restaurants">
-          <img src="pictures/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo-a-la-francaise" class="photos-restaurants-disponibles" />
+          <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo-a-la-francaise" class="photos-restaurants-disponibles" />
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin padding-titre-restaurants">À la française</h3>
             <p class="suppression-margin padding-paragraphe-restaurants">Cité Rouge</p>
@@ -117,7 +117,7 @@
         </article>
         <!-- Bloc 'Le délice des sens' -->
         <article class="conteneur-restaurants">
-          <img src="pictures/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo-le-delice-des-sens" class="photos-restaurants-disponibles" />
+          <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo-le-delice-des-sens" class="photos-restaurants-disponibles" />
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin padding-titre-restaurants">Le délice des sens</h3>
             <p class="suppression-margin padding-paragraphe-restaurants">Folie-Méricourt</p>
