Correction nom classe HTML

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
   </main>
   <!-- Footer -->
   <footer class="couleur-blanc">
-    <div class="flex-column">
+    <div class="flex-footer">
       <span class="titre-footer-ohmyfood">ohmyfood</span>
-      <ul class="flex-column gap-10px">
+      <ul class="flex-footer gap-10px">
         <li class="display-align-center gap-footer-1">
           <i class="fa-solid fa-utensils"></i>
           <p class="suppression-margin">Proposer un restaurant</p>
