--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="conteneur-fonctionnement fond-gris-clair">
           <div class="display-align-center gap-blocs-fonctionnement">
             <div class="position-cercle-fonctionnement">
-              <span class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">1</span>
+              <div class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">1</div>
             </div>
             <i class="fa-solid fa-mobile-screen-button couleur-icones-fonctionnement"></i>
             <h3 class="taille-titre-fonctionnement font-size-medium">Choisissez un restaurant</h3>
@@ -56,7 +56,7 @@
         <div class="conteneur-fonctionnement fond-gris-clair">
           <div class="display-align-center gap-blocs-fonctionnement">
             <div class="position-cercle-fonctionnement">
-              <span class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">2</span>
+              <div class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">2</div>
             </div>
             <i class="fa-solid fa-list-ul couleur-icones-fonctionnement"></i>
             <h3 class="taille-titre-fonctionnement font-size-medium">Composez votre menu</h3>
@@ -65,7 +65,7 @@
         <div class="conteneur-fonctionnement fond-gris-clair">
           <div class="display-align-center gap-blocs-fonctionnement">
             <div class="position-cercle-fonctionnement">
-              <span class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">3</span>
+              <div class="cercle-chiffres-fonctionnement couleur-blanc flexbox-justify-align-center">3</div>
             </div>
             <i class="fa-solid fa-store couleur-icones-fonctionnement"></i>
             <h3 class="taille-titre-fonctionnement font-size-medium">Dégustez au restaurant</h3>
@@ -83,7 +83,7 @@
         <article class="conteneur-restaurants">
           <div class="position-relative">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo-la-palette-du-gout" class="photos-restaurants-disponibles" />
-            <span class="nouveau-restaurant position-absolute">Nouveau</span>
+            <div class="nouveau-restaurant position-absolute">Nouveau</div>
           </div>
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin padding-titre-restaurants">La palette du goût</h3>
@@ -96,7 +96,7 @@
         <article class="conteneur-restaurants">
           <div class="position-relative">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo-la-note-enchantee" class="photos-restaurants-disponibles" />
-            <span class="nouveau-restaurant position-absolute">Nouveau</span>
+            <div class="nouveau-restaurant position-absolute">Nouveau</div>
           </div>
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin padding-titre-restaurants">La note enchantée</h3>
@@ -131,7 +131,7 @@
   <!-- Footer -->
   <footer class="couleur-blanc">
     <div class="flex-footer">
-      <span class="titre-footer-ohmyfood">ohmyfood</span>
+      <div class="titre-footer-ohmyfood">ohmyfood</div>
       <ul class="flex-footer gap-10px">
         <li class="display-align-center gap-footer-1">
           <i class="fa-solid fa-utensils"></i>
