Modification taille header, ajout lien d'un restaurant dans le HTML

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body class="suppression-margin">
   <!-- Loading Spinner-->
   <div class="loader flexbox-justify-align-center fond-gris-clair position-fixed">
-    <div class="spinner hauteur-50px position-fixed">
-    </div>
+    <div class="spinner hauteur-50px position-fixed"></div>
   </div>
+  <header>
   <!-- Logo ohmyfood -->
-  <div class="hauteur-50px flexbox-justify-align-center">
+  <div class="flexbox-justify-align-center">
     <img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" class="logo" />
   </div>
   </header>
@@ -81,6 +81,7 @@
       <div class="flex-column flexbox-restaurants-global">
         <!-- Bloc 'La palette du goût' -->
         <article class="conteneur-restaurants">
+          <a href="la_palette_du_gout.html">
           <div class="position-relative">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo-la-palette-du-gout" class="photos-restaurants-disponibles" />
             <div class="nouveau-restaurant position-absolute">Nouveau</div>
@@ -91,6 +92,7 @@
             <i class="far fa-heart classe-icone position-absolute"></i>
             <i class="fas fa-heart classe-icone position-absolute"></i>
           </div>
+          </a>
         </article>
         <!-- Bloc 'La note enchantée' -->
         <article class="conteneur-restaurants">
