Ajout classe flexbox dans le header, suppression d'une div

--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
   <div class="loader flexbox-justify-align-center fond-gris-clair position-fixed">
     <div class="spinner hauteur-50px position-fixed"></div>
   </div>
-  <header>
-  <!-- Logo ohmyfood -->
-  <div class="flexbox-justify-align-center">
+  <!-- Header / Logo ohmyfood -->
+  <header class="flexbox-justify-align-center">
     <img src="images/logo/ohmyfood.png" alt="logo-ohmyfood" class="logo" />
-  </div>
   </header>
   <main>
     <!-- Localisation utilisateur -->
