--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </article>
         <!-- Bloc 'La note enchantée' -->
         <article class="conteneur-restaurants">
+          <a href="la_note_enchantee.html">
           <div class="position-relative">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo-la-note-enchantee" class="photos-restaurants-disponibles" />
             <div class="nouveau-restaurant position-absolute">Nouveau</div>
@@ -101,26 +102,31 @@
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin margin-titre-restaurants">La note enchantée</h3>
             <p class="suppression-margin margin-paragraphe-restaurants">Charonne</p>
+          </a>
             <i class="far fa-heart classe-icone position-absolute"></i>
             <i class="fas fa-heart classe-icone position-absolute"></i>
           </div>
         </article>
         <!-- Bloc 'À la française' -->
         <article class="conteneur-restaurants">
+          <a href="a_la_francaise.html">
           <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo-a-la-francaise" class="photos-restaurants-disponibles" />
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin margin-titre-restaurants">À la française</h3>
             <p class="suppression-margin margin-paragraphe-restaurants">Cité Rouge</p>
+          </a>
             <i class="far fa-heart classe-icone position-absolute"></i>
             <i class="fas fa-heart classe-icone position-absolute"></i>
           </div>
         </article>
         <!-- Bloc 'Le délice des sens' -->
         <article class="conteneur-restaurants">
+          <a href="le_delice_des_sens.html">
           <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo-le-delice-des-sens" class="photos-restaurants-disponibles" />
           <div class="flex-column position-relative informations-restaurants-disponibles">
             <h3 class="suppression-margin margin-titre-restaurants">Le délice des sens</h3>
             <p class="suppression-margin margin-paragraphe-restaurants">Folie-Méricourt</p>
+          </a>
             <i class="far fa-heart classe-icone position-absolute"></i>
             <i class="fas fa-heart classe-icone position-absolute"></i>
           </div>
