Modification noms classes loading spinner

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="suppression-margin">
   <!-- Loading Spinner-->
-  <div class="loader flexbox-justify-align-center fond-gris-clair position-fixed">
-    <div class="spinner hauteur-50px position-fixed">
+  <div class="filtre-loader flexbox-justify-align-center fond-gris-clair position-fixed">
+    <div class="loader hauteur-50px position-fixed">
     </div>
   </div>
   <!-- Header / Logo ohmyfood -->
