Suppression div HTML

--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -35,10 +35,7 @@
         </div>
         <section class="margin-bottom-40px">
           <!-- Entrées -->
-          <h3 class="entrees-plats-desserts">ENTRÉES
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">ENTRÉES</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Ravioles de foie gras</h3>
             <div class="flexbox-paragraphe-prix">
@@ -82,10 +79,7 @@
         </section>
         <section class="margin-bottom-40px">
           <!-- Plats -->
-          <h3 class="entrees-plats-desserts">PLATS
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">PLATS</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Noix de coquilles Saint-Jacques</h3>
             <div class="flexbox-paragraphe-prix">
@@ -119,10 +113,7 @@
         </section>
         <section>
           <!-- Desserts -->
-          <h3 class="entrees-plats-desserts">DESSERTS
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">DESSERTS</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Macaron noisette et chocolat</h3>
             <div class="flexbox-paragraphe-prix">
