--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -35,10 +35,7 @@
         </div>
         <section class="margin-bottom-40px">
           <!-- Entrées -->
-          <h3 class="entrees-plats-desserts">ENTRÉES
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">ENTRÉES</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Tartare de poulpe acidulé</h3>
             <div class="flexbox-paragraphe-prix">
@@ -72,10 +69,7 @@
         </section>
         <section class="margin-bottom-40px">
           <!-- Plats -->
-          <h3 class="entrees-plats-desserts">PLATS
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">PLATS</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Coquilles Saint-Jacques</h3>
             <div class="flexbox-paragraphe-prix">
@@ -109,10 +103,7 @@
         </section>
         <section>
           <!-- Desserts -->
-          <h3 class="entrees-plats-desserts">DESSERTS
-            <div class="bordure">
-            </div>
-          </h3>
+          <h3 class="entrees-plats-desserts">DESSERTS</h3>
           <article class="conteneur-articles margin-bottom-20px position-relative">
             <h3 class="suppression-margin line-height-30px texte-nowrap">Pétales de violettes glacées</h3>
             <div class="flexbox-paragraphe-prix">
